@@ -1,0 +1,3 @@
+PKG_CHECK_MODULES(GUILE_ATK, guile-atk)
+AC_SUBST(GUILE_ATK_CFLAGS)
+AC_SUBST(GUILE_ATK_LIBS)
