@@ -1,0 +1,3 @@
+PKG_CHECK_MODULES(GUILE_PANGO, guile-pango)
+AC_SUBST(GUILE_PANGO_CFLAGS)
+AC_SUBST(GUILE_PANGO_LIBS)
